--- a/public/css/new-age.css
+++ b/public/css/new-age.css
@@ -228,7 +228,7 @@ section.cta {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); }
+    background-color: transparent; }
 
 section.contact {
   text-align: center; }
