--- a/public/scss/_cta.scss
+++ b/public/scss/_cta.scss
@@ -27,6 +27,6 @@ section.cta {
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: fade-out(black, .5);
+        background-color: fade-out(black, 1);
     }
 }
