--- a/public/scss/_download.scss
+++ b/public/scss/_download.scss
@@ -17,7 +17,7 @@ section.download {
                 height: 60px;
             }
             @media(min-width: 768px) {
-                display: inline-block;
+                display: inline;
                 margin-bottom: 0;
             }
         }
