--- a/public/scss/_masthead.scss
+++ b/public/scss/_masthead.scss
@@ -27,11 +27,20 @@ header.masthead {
             border-radius: 3px;
         }
     }
+    .flex-column {
+        display: flex;
+        display: -webkit-flex;
+        justify-content: center;
+        -webkit-justify-content: center;
+        align-items: center;
+        -webkit-align-items: center;
+        flex-direction: column;
+    }
     @media (min-width: 992px) {
         height: 100vh;
         min-height: 775px;
-        padding-top: 0;
-        padding-bottom: 0;
+        // padding-top: 0;
+        // padding-bottom: 0;
         .header-content {
             margin-bottom: 0;
 
