--- a/public/css/new-age.css
+++ b/public/css/new-age.css
@@ -48,6 +48,15 @@ section {
   section h2 {
     font-size: 50px; }
 
+.home {
+  font-size: large !important;
+  text-align: left !important; }
+
+@media (max-width: 992px) {
+  .home {
+    font-size: large !important;
+    text-align: left !important; } }
+
 #mainNav {
   border-color: rgba(34, 34, 34, 0.05);
   background-color: white;
@@ -117,6 +126,7 @@ header.masthead {
   width: 100%;
   padding-top: 150px;
   padding-bottom: 100px;
+  min-height: 870px !important;
   color: white;
   background: url("../img/bg-pattern.png"), #FFE29D;
   background: url("../img/bg-pattern.png"), -webkit-linear-gradient(to left, #FFE29D, #0078BE);
@@ -144,7 +154,7 @@ header.masthead {
   @media (min-width: 992px) {
     header.masthead {
       height: 100vh;
-      min-height: 775px; }
+      min-height: 870px; }
       header.masthead .header-content {
         margin-bottom: 0;
         text-align: left; }
