--- a/public/css/simply-city.css
+++ b/public/css/simply-city.css
@@ -9081,6 +9081,18 @@ section h2 {
   font-size: 50px;
 }
 
+.home {
+  font-size: large!important;
+  text-align: left!important;
+}
+
+@media (max-width:992px) {
+  .home {
+    font-size: large!important;
+    text-align: left!important;
+  }
+}
+
 #mainNav {
   border-color: rgba(34,34,34,.05);
   background-color: #fff;
@@ -9191,6 +9203,7 @@ header.masthead {
   width: 100%;
   padding-top: 150px;
   padding-bottom: 100px;
+  min-height: 870px!important;
   color: #fff;
   background: url("../../../img/bg-pattern.png"),#ffe29d;
   background: url("../../../img/bg-pattern.png"),-webkit-linear-gradient(to left,#ffe29d,#0078BE);
@@ -9230,7 +9243,7 @@ header.masthead .flex-column {
 @media (min-width:992px) {
   header.masthead {
     height: 100vh;
-    min-height: 775px;
+    min-height: 870px;
   }
 
   header.masthead .header-content {
