--- a/public/scss/_global.scss
+++ b/public/scss/_global.scss
@@ -50,3 +50,16 @@ section {
         font-size: 50px;
     }
 }
+
+.home {
+    font-size: large!important;
+    text-align: left!important;
+}
+
+
+@media (max-width: 992px) {
+    .home {
+        font-size: large!important;
+        text-align: left!important;
+    }
+}
