--- a/public/scss/_masthead.scss
+++ b/public/scss/_masthead.scss
@@ -5,6 +5,7 @@ header.masthead {
     width: 100%;
     padding-top: 150px;
     padding-bottom: 100px;
+    min-height: 870px!important;
 
     color: white;
     background: url('../img/bg-pattern.png'), $theme-secondary;
@@ -38,7 +39,7 @@ header.masthead {
     }
     @media (min-width: 992px) {
         height: 100vh;
-        min-height: 775px;
+        min-height: 870px;
         // padding-top: 0;
         // padding-bottom: 0;
         .header-content {
