--- a/public/css/simply-city.css
+++ b/public/css/simply-city.css
@@ -9019,7 +9019,7 @@ a.text-dark:hover {
 /*# sourceMappingURL=bootstrap.min.css.map */
 /*!
  * Start Bootstrap - New Age v4.0.0-beta (https://startbootstrap.com/template-overviews/new-age)
- * Copyright 2013-2018 Start Bootstrap
+ * Copyright 2013-2019 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-new-age/blob/master/LICENSE)
  */
 
@@ -9449,6 +9449,18 @@ footer {
   background-color: #222;
 }
 
+footer a {
+  font-size: 12px;
+  color: rgba(255,255,255,.3);
+}
+
+footer a.active,
+footer a:active,
+footer a:focus,
+footer a:hover {
+  text-decoration: none;
+}
+
 footer p {
   font-size: 12px;
   margin: 0;
@@ -9458,16 +9470,8 @@ footer ul {
   margin-bottom: 0;
 }
 
-footer ul li a {
-  font-size: 12px;
-  color: rgba(255,255,255,.3);
-}
-
-footer ul li a.active,
-footer ul li a:active,
-footer ul li a:focus,
-footer ul li a:hover {
-  text-decoration: none;
+footer .mt-6 {
+  margin-top: 6px;
 }
 
 .bg-primary {
