--- a/public/scss/_footer.scss
+++ b/public/scss/_footer.scss
@@ -4,23 +4,24 @@ footer {
     text-align: center;
     color: fade-out(white, .7);
     background-color: $gray-darker;
+    a {
+        font-size: 12px;
+        color: fade-out(white, .7);
+        &:hover,
+        &:focus,
+        &:active,
+        &.active {
+            text-decoration: none;
+        }
+    }
     p {
         font-size: 12px;
         margin: 0;
     }
     ul {
         margin-bottom: 0;
-        li {
-            a {
-                font-size: 12px;
-                color: fade-out(white, .7);
-                &:hover,
-                &:focus,
-                &:active,
-                &.active {
-                    text-decoration: none;
-                }
-            }
-        }
+    }
+    .mt-6 {
+        margin-top: 6px;
     }
 }
