--- a/public/device-mockups/device-mockups.css
+++ b/public/device-mockups/device-mockups.css
@@ -71,6 +71,57 @@
 
 /* DEVICES */
 
+/* iMac */
+.device-mockup.imac {
+	padding-bottom: 81.230769%;
+}
+
+.device-mockup.imac > .device {
+	background-image: url("imac/imac.png");
+}
+
+.device-mockup.imac > .device > .screen {
+	top: 8.20707071%; bottom: 31.6919192%; left: 6.61538462%; right: 6.61538462%;
+}
+
+
+/* MacBook Pro */
+.device-mockup.macbook {
+	padding-bottom: 61.775701%;
+}
+
+.device-mockup.macbook > .device {
+	background-image: url("macbook/macbook.png");
+}
+
+.device-mockup.macbook > .device > .screen {
+	top: 11.0438729%; bottom: 14.6747352%; left: 13.364486%; right: 13.364486%;
+}
+
+/* MacBook 2015 */
+.device-mockup.macbook_2015 {
+	padding-bottom: 57.50%;
+}
+
+.device-mockup.macbook_2015 > .device,
+.device-mockup.macbook_2015.grey > .device {
+	background-image: url("macbook_2015/grey.png");
+}
+
+.device-mockup.macbook_2015 > .device,
+.device-mockup.macbook_2015.silver > .device {
+	background-image: url("macbook_2015/silver.png");
+}
+
+.device-mockup.macbook_2015 > .device,
+.device-mockup.macbook_2015.gold > .device {
+	background-image: url("macbook_2015/gold.png");
+}
+
+.device-mockup.macbook_2015 > .device > .screen {
+    top: 7.5%; bottom: 10.9%; left: 12.46%; right: 12.56%;
+}
+
 /* iPhone 6 Plus*/
 .device-mockup.iphone6_plus,
 .device-mockup.iphone6_plus.portrait {
