--- a/public/scss/_bootstrap-overrides.scss
+++ b/public/scss/_bootstrap-overrides.scss
@@ -5,6 +5,12 @@
     background: linear-gradient($theme-primary, darken($theme-primary, 5%));
 }
 
+.bg-tertiary{
+    background: $theme-tertiary;
+    background: -webkit-linear-gradient($theme-tertiary, darken($theme-tertiary, 5%));
+    background: linear-gradient($theme-tertiary, darken($theme-tertiary, 5%));
+}
+
 .text-primary {
     color: $theme-primary;
 }
